--- a/style.css
+++ b/style.css
@@ -50,17 +50,13 @@ form input {
     height: 25px;
 	border: none;
     width: 350px;
-}
-
-.form1 .form2 input {
-    margin-top: 10px;
-    margin-bottom: 15px;
-    text-transform: uppercase;
+    margin-bottom: 5px;
 }
 
 .radio {
     width: 20px;
-    margin-left: 15px;
+    margin-left: 12px;
+    margin-right: 5px;
 }
 
 .option-label {
@@ -75,7 +71,7 @@ label {
     display: inline-block;
 }
 
-/* Chrome e outros */
+/* Chrome etc */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -85,4 +81,33 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.botoes {
+	display: flex;
+	justify-content: space-between;
+}
+
+.botoes input {
+    width: 160px;
+	height: 35px;
+    margin-top: 15px;
+    font-family: 'Courier New', Courier, monospace;
+    background-image: linear-gradient(-50deg, #1cabd5, #27158dab);
+    font-size: 16px;
+	font-weight:bold;
+	cursor: pointer;
+}
+
+.botoes input:hover{
+    background-color:#27158dab;
+    color:white;
+}
+
+footer {
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    color: rgb(172, 169, 169);
+    font-family: 'Courier New', Courier, monospace;
 }
